--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,10 +1,11 @@
 <!--HTML page that displays a header and a footer-->
-<html>
-	<body style="margin:0%; padding:0;">
-		<header style="background-color:red; height:70px; width:100%">
-		</header>
-		<footer style="background-color:green; height:60px; width:100%; position:absolut; text-align:center; justify-content:center;">
-			Best School
-		</footer>
-	</body>
-</html>
+<html lang="en">
+        <title>AirBnB Clone</title>
+        <body style="margin:0%; padding:0;">
+                <header style="background-color:red; height:70px; width:100%">
+                </header>       
+                <footer style="background-color:green; height:60px; width:100%; position:absolute; text-align:center; justify-content:center; bottom: 0;">
+                        Best School
+                </footer>
+        </body>
+</html> 
